Adicionado valor total dos itens do orçamento e renomeado nome referente ao valor do orçamento, e padronizações.